# mcp-crawl4ai-rag

./: .env.example  .env.test  .gitignore  CLAUDE_DESKTOP_CONFIG.md  DOCKER_DEBUG_GUIDE.md  Dockerfile  ENHANCED_SEARCH_SUMMARY.md  FINAL_INTEGRATION_DEMO.py  FINAL_RESOLUTION.md  LIGHTRAG_OPTIONS_DIAGNOSIS.md  README.md  age_installation.md  compare_queries.py  debug_connection.py  debug_docker.sh  debug_function.py  debug_lightrag_connection.py  debug_properties.py  debug_schema_tools.py  diagnose_kg_content.py  docker-compose.yml  example_lightrag_schema.sql  fix_postgres_host.py  fix_pytest_setup.py  fix_tool_description.py  knowledge_graph_usage.md  lightrag_knowledge_graph_schema.sql  optimize_vector_indexes.py  planning.md  pyproject.toml  pytest.ini  pytest_debug.md  pytest_warnings_fix_summary.md  quick_test.py  rebuild_mcp.py  refactor_mcp_plan.md  run_integration_tests.py  run_tests.py  setup_crawl_schema.sql  task_3_completion_summary.md  (+9 more)
src/: __init__.py  crawl4ai_mcp.py  database.py  enhanced_kg_integration.py  lightrag_integration.py  lightrag_knowledge_graph.py  lightrag_search_improved.py  utils.py
tests/: __init__.py  conftest.py  test_enhanced_search.py  test_lightrag_integration.py  test_main_mcp_migration.py  test_mcp_integration.py  test_models_responses.py  test_path_fix.py  test_utils.py  test_vector_search_task_4_1.py
tests_debug_mcp/: LIGHTRAG_FIX_SUMMARY.md  LIGHTRAG_SUCCESS_SUMMARY.md  LIGHTRAG_TROUBLESHOOTING.md  MCP_TOOLS_VERIFICATION.py  TESTING_SUCCESS_REPORT.md  test_db_setup.py  test_final_lightrag.py  test_fixed_lightrag.py  (+15 more)
(+22 files in other folders)
